redimension des width de la class "catégorie" en max content pour que "animaux autorisés" ne wrap pas et que les borders aient une taille correcte

--- a/Projet 2/style/phone.css
+++ b/Projet 2/style/phone.css
@@ -124,6 +124,9 @@ justify-content: left;
     font-size: 20px;
 }
 
+.familial{
+}
+
 .filtres{
     color: #0065FC ;
     font-size: 20px;
@@ -145,11 +148,12 @@ justify-content: left;
 .categorie{
     display: flex;
     font-weight: bold;
+    font-size: 20px;
     border-width: 1px;
     border-radius: 40px;
     border: 3px solid #F2F2F2;
     margin-top: 10px;
-    width: 240px;
+    width:max-content;
     max-height: 60px;
 }
 
